hphp/hack/test/typecheck/class_refinements/runner-pattern.php.exp
File "runner-pattern.php", line 37, characters 12-17:
A `where` type constraint is violated here (Typing[4323])
  File "runner-pattern.php", line 24, characters 19-24:
  This is the method with `where` type constraints
  File "runner-pattern.php", line 25, characters 17-39:
  Expected a class with `{type T = _}`
  File "runner-pattern.php", line 16, characters 20-23:
  But got `TBox as Box`
  File "runner-pattern.php", line 25, characters 9-12:
    via this generic `TBox`
